--- a/patterns.html
+++ b/patterns.html
@@ -15,8 +15,8 @@
 
 <body>
   <!-- Application container. -->
-  <main role="main" id="main">
-    <div id="menu">
+  
+  <div id="menu">
         <div class="pure-menu pure-menu-open">
             <a class="pure-menu-heading" href="/">Home</a>
             <ul>
@@ -59,7 +59,14 @@
             </ul>
         </div>
     </div>
-  </main>
+    <main role="main" id="main">
+        <div id="grid">
+            <div class="header">
+                <h1><a href="patterns.html">Pattern Library</a></h1>
+                <h2>Grid System</h2>
+            </div>
+        </div>
+    </main>
 
   <!-- Application source. -->
 
